# trace-gen

./: Cargo.toml
src/: cmaker.rs  main.rs  trace.rs
