[package]
name = "trace-gen"
version = "0.1.0"
authors = ["SchrodingerZhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = "0.1.13"
log = "0.4"
pretty_env_logger = "*"
simd-json = "0.2"
structopt = "0.3"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rayon = "*"
hashbrown = { version = "*", features = ["rayon"] }